* Implemented export and import methods. * More utility functions. * More comments for improvements.

--- a/todo.html
+++ b/todo.html
@@ -44,8 +44,8 @@
 					<hr />
 				</div>
 
-				<button id="btnExportTasks" class="btn btn-success" type="button">Export Tasks</button>
-				<button id="btnImportTasks" class="btn btn-success" type="button">Import Tasks</button>
+				<button id="btnExportTasks" class="btn btn-success" type="button" onclick="btnExportTasks_OnClick()">Export Tasks</button>
+				<button id="btnImportTasks" class="btn btn-success" type="button" onclick="btnImportTasks_OnClick()">Import Tasks</button>
 				<button id="btnClearTasks" class="btn btn-danger" type="button" onclick="btnClearTasks_OnClick()">Clear ALL Tasks</button>
 
 				<br />
