--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
 </head>
 <body>
+    <div id="particles-js"></div>
+
     <form id="formMain" runat="server">
         <div class="col-md-4">
         </div>
 
         <div class="col-md-4">
             <div class="center-horizontally center-vertically">
-                <h1>TODO</h1>
+                <h1 class="white-text">TODO</h1>
 
                 <button id="btnTodo" class="btn btn-success" type="button" onclick="redirect('todo.html')">Get Prepared</button>
             </div>
@@ -26,5 +28,7 @@
     </form>
 
     <script src="js/utlities.js"></script>
+    <script src="js/particles.min.js"></script>
+    <script src="js/particles.js"></script>
 </body>
 </html>
