--- a/index.html
+++ b/index.html
@@ -11,21 +11,14 @@
 <body>
     <div id="particles-js"></div>
 
-    <form id="formMain" runat="server">
-        <div class="col-md-4">
-        </div>
+    <div class="col-md-12">
+        <div class="center-horizontally center-vertically">
+            <h1 class="white-text">TODO</h1>
+            <!-- <h3 class="white-text">The new task management system for <i>REAL</i> programmers</h3> -->
 
-        <div class="col-md-4">
-            <div class="center-horizontally center-vertically">
-                <h1 class="white-text">TODO</h1>
-
-                <button id="btnTodo" class="btn btn-success" type="button" onclick="redirect('todo.html')">Get Prepared</button>
-            </div>
+            <button id="btnTodo" class="btn btn-success" type="button" onclick="redirect('todo.html')">Get Prepared</button>
         </div>
-
-        <div class="col-md-4">
-        </div>
-    </form>
+    </div>
 
     <script src="js/utlities.js"></script>
     <script src="js/particles.min.js"></script>
