* Add 'index' specific css sheet. * Add button styling used with the index.html 'Get Prepared' button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -14,9 +15,9 @@
     <div class="col-md-12">
         <div class="center-horizontally center-vertically">
             <h1 class="white-text">TODO</h1>
-            <!-- <h3 class="white-text">The new task management system for <i>REAL</i> programmers</h3> -->
+            <h4 class="white-text">The new task management system for <i>REAL</i> programmers</h4>
 
-            <button id="btnTodo" class="btn btn-success" type="button" onclick="redirect('todo.html')">Get Prepared</button>
+            <button id="btnTodo" class="btn btn-success btn-big" type="button" onclick="redirect('todo.html')">Get Prepared</button>
         </div>
     </div>
 
