* Removed redundant CSS file. * Removed redundant form tag * Removed redundant runat attribute

--- a/index.html
+++ b/index.html
@@ -6,23 +6,21 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
-    <link href="css/index.css" rel="stylesheet" />
-
 </head>
 <body>
     <div id="particles-js"></div>
 
     <div class="col-md-12">
         <div class="center-horizontally center-vertically">
-            <h1 class="white-text">TODO</h1>
+            <h1 class="h1-big white-text">TODO</h1>
             <h4 class="white-text">The new task management system for <i>REAL</i> programmers</h4>
 
             <button id="btnTodo" class="btn btn-success btn-big" type="button" onclick="redirect('todo.html')">Get Prepared</button>
         </div>
     </div>
 
-    <script src="js/utlities.js"></script>
     <script src="js/particles.min.js"></script>
     <script src="js/particles.js"></script>
+    <script src="js/utlities.js"></script>
 </body>
 </html>
