--- a/todo.html
+++ b/todo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head runat="server">
+<head>
 	<title>TODO</title>
 
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -10,59 +10,58 @@
 <body onload="body_OnLoad()">
 	<div id="particles-js"></div>
 
-	<form id="form1" runat="server">
-		<div class="col-md-6 scrollable-column">
-			<div class="center-horizontally">
-				<div id="addTaskHeader">
-					<h1 class="padded-title white-text">Add Task</h1>
-					<hr />
-				</div>
-				
-				<div>
-					<h4 class="white-text">Task Title:</h4>
-					<input id="tbTaskTitle" class="textbox-width" type="plain">
-				</div>
-
-				<div>
-					<h4 class="white-text">Task Description:</h4>
-					<textarea id="tbTaskDescription" class="textbox-width" type="plain"></textarea>
-				</div>
-
-				<div>
-					<h4 class="white-text">Task Due Date:</h4>
-					<input id="tbDueDate" class="textbox-width" type="Date">
-				</div>
-
-				<br />
-
-				<button id="btnAddTask" class="btn btn-success" type="button" onclick="btnAddTask_OnClick()">Add Task</button>
-			</div>
-		</div>
-
-		<div class="col-md-6 scrollable-column">
-			<div class="center-horizontally">
-				<div id="currentTasksHeader">
-					<h1 class="padded-title white-text">Current Tasks</h1>
-					<hr />
-				</div>
-
-				<button id="btnExportTasks" class="btn btn-success" type="button" onclick="btnExportTasks_OnClick()">Export Tasks</button>
-				<button id="btnImportTasks" class="btn btn-success" type="button" onclick="btnImportTasks_OnClick()">Import Tasks</button>
-				<button id="btnClearTasks" class="btn btn-danger" type="button" onclick="btnClearTasks_OnClick()">Clear ALL Tasks</button>
-
-				<br />
-
+	<div class="col-md-6 scrollable-column">
+		<div class="center-horizontally">
+			<div id="addTaskHeader">
+				<h1 class="padded-title white-text">Add Task</h1>
 				<hr />
+			</div>
+			
+			<div>
+				<h4 class="white-text">Task Title:</h4>
+				<input id="tbTaskTitle" class="textbox-width" type="plain">
+			</div>
 
-				<div id="existingTasks">
-				</div>
+			<div>
+				<h4 class="white-text">Task Description:</h4>
+				<textarea id="tbTaskDescription" class="textbox-width" type="plain"></textarea>
+			</div>
+
+			<div>
+				<h4 class="white-text">Task Due Date:</h4>
+				<input id="tbDueDate" class="textbox-width" type="Date">
+			</div>
+
+			<br />
+
+			<button id="btnAddTask" class="btn btn-success" type="button" onclick="btnAddTask_OnClick()">Add Task</button>
+		</div>
+	</div>
+
+	<div class="col-md-6 scrollable-column">
+		<div class="center-horizontally">
+			<div id="currentTasksHeader">
+				<h1 class="padded-title white-text">Current Tasks</h1>
+				<hr />
+			</div>
+
+			<button id="btnExportTasks" class="btn btn-success" type="button" onclick="btnExportTasks_OnClick()">Export Tasks</button>
+			<button id="btnImportTasks" class="btn btn-success" type="button" onclick="btnImportTasks_OnClick()">Import Tasks</button>
+			<button id="btnClearTasks" class="btn btn-danger" type="button" onclick="btnClearTasks_OnClick()">Clear ALL Tasks</button>
+			<button id="btnDeleteSavedTasks" class="btn btn-danger" type="button" onclick="btnDeleteSavedTasks_OnClick()">Delete Saved Tasks</button>
+
+			<br />
+
+			<hr />
+
+			<div id="existingTasks">
 			</div>
 		</div>
-	</form>
+	</div>
 
 	<script src="js/lodash.js"></script>
-	<script src="js/todo.js"></script>
 	<script src="js/particles.min.js"></script>
     <script src="js/particles.js"></script>
+	<script src="js/todo.js"></script>
 </body>
 </html>
