--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 
     <script src="js/particles.min.js"></script>
     <script src="js/particles.js"></script>
-    <script src="js/utlities.js"></script>
+    <script src="js/utilities.js"></script>
 </body>
 </html>
