--- a/todo.html
+++ b/todo.html
@@ -16,8 +16,6 @@
 				<h1 class="padded-title white-text">Add Task</h1>
 				<hr />
 			</div>
-
-			<div></div>
 			
 			<div>
 				<h4 class="white-text">Task Title:</h4>
@@ -86,6 +84,7 @@
 	<script src="js/lodash.min.js"></script>
 	<script src="js/particles.min.js"></script>
     <script src="js/particles.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/todo.js"></script>
     <script src="js/utilities.js"></script>
 </body>
