--- a/todo.html
+++ b/todo.html
@@ -4,8 +4,7 @@
 <head>
 	<title>TODO</title>
 
-	<link href="css/bootstrap.min.css" rel="stylesheet" />
-	<link href="css/main.css" rel="stylesheet" />
+	<meta http-equiv="Cache-control" content="public">
 </head>
 <body onload="body_OnLoad()">
 	<div id="particles-js"></div>
@@ -58,7 +57,7 @@
 
 			<hr />
 
-			<div id="existingTasks">
+			<div id="existing-tasks">
 			</div>
 		</div>
 	</div>
@@ -76,16 +75,26 @@
 
 			<hr>
 
-			<div id="completedTasks">
+			<div id="completed-tasks">
 			</div>
 		</div>
 	</div>
 
+	<!-- CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet" />
+	<link href="css/main.css" rel="stylesheet" />
+
+	<!-- Frameworks -->
 	<script src="js/lodash.min.js"></script>
 	<script src="js/particles.min.js"></script>
+	<script src="js/jquery-3.3.1.min.js"></script>
+
+	<!-- Classes -->
+	<script src="js/Classes/Cookies.js"></script>
+	<script src="js/Classes/Utilities.js"></script>
+
+	<!-- Scripts -->
     <script src="js/particles.js"></script>
-    <script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/todo.js"></script>
-    <script src="js/utilities.js"></script>
 </body>
 </html>
